apps/logging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: script-runner
  labels:
    pod-security.kubernetes.io/enforce: "privileged"
    pod-security.kubernetes.io/enforce-version: "latest"
    pod-security.kubernetes.io/warn: "baseline"
    pod-security.kubernetes.io/warn-version: "latest"
    pod-security.kubernetes.io/audit: "baseline"
    pod-security.kubernetes.io/audit-version: "latest"
