apps/logging/hubble-cli.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hubble-cli
  namespace: kube-system
  labels:
    app.kubernetes.io/name: hubble-cli
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hubble-cli
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hubble-cli
    spec:
      securityContext:
        runAsUser: 0          # Run as root
        runAsGroup: 0
        fsGroup: 0
      containers:
      - name: hubble-cli
        image: quay.io/cilium/hubble:v0.13.4@sha256:4487484557e9b4d4f33e21b7f52e6a644251c72a562e3a7a913fc2edde57edf3
        imagePullPolicy: IfNotPresent
        command:
          - tail
        args:
          - -f
          - /dev/null
        volumeMounts:
          - mountPath: /var/run/cilium
            name: hubble-sock-dir
            readOnly: true
          - mountPath: /var/lib/hubble-relay/tls
            name: tls
            readOnly: true
      restartPolicy: Always
      volumes:
      - hostPath:
          path: /var/run/cilium
          type: Directory
        name: hubble-sock-dir
      - name: tls
        projected:
          sources:
          - secret:
              name: hubble-multi-certs
              items:
                - key: tls.crt
                  path: client.crt
                - key: tls.key
                  path: client.key
                - key: ca.crt
                  path: ca.crt
