apps/logging/fluentd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fluentd
  namespace: logging
spec:
  selector:
    app: fluentd
  ports:
    - port: 24224
      targetPort: 24224
