apps/logging/7-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: enforce-mtls
spec:
  endpointSelector: {}  # applies to all pods

  ingress:
  # Allow inbound only on port 443 from any source
  - fromEndpoints:
    - matchLabels: {}
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP

  egress:
  # Allow DNS to CoreDNS pods (UDP+TCP 53)
  - toEndpoints:
    - matchLabels: {}       # matches any pod
      matchExpressions:
        - key: "k8s:io.kubernetes.pod.namespace"
          operator: In
          values:
            - kube-system
    toPorts:
      - ports:
          - port: "53"
            protocol: UDP
          - port: "53"
            protocol: TCP

  # Allow HTTPS (443) to any destination
  - toPorts:
      - ports:
          - port: "443"
            protocol: TCP
